--- a/PythonAXF/templates/market/market.html
+++ b/PythonAXF/templates/market/market.html
@@ -1,20 +1,18 @@
 {% extends 'base/base.html' %}
 
 {% block title %}
-    <title>我的</title>
+    <title>闪购超市</title>
 {% endblock %}
-
 
 {% block EXTCSS %}
     <style>
-        footer .mine span {
-            background: url(/static/base/img/mine1.png) no-repeat center;
+        footer .market span {
+            background: url(/static/base/img/market1.png) no-repeat center;
             background-size: 1.25rem;
         }
     </style>
 {% endblock %}
 
-
 {% block content %}
-我的
+山沟超市
 {% endblock %}
