爱鲜蜂day01-导航栏字体变色

--- a/PythonAXF/templates/cart/cart.html
+++ b/PythonAXF/templates/cart/cart.html
@@ -10,6 +10,9 @@
             background: url(/static/base/img/cart1.png) no-repeat center;
             background-size: 1.25rem;
         }
+        footer .cart dd {
+            color: #ffd601;
+        }
     </style>
 {% endblock %}
 
