--- a/PythonAXF/templates/home/home.html
+++ b/PythonAXF/templates/home/home.html
@@ -10,6 +10,9 @@
             background: url(/static/base/img/home1.png) no-repeat center;
             background-size: 1.25rem;
         }
+        footer .home dd {
+            color: #ffd601;
+        }
     </style>
 {% endblock %}
 
