--- a/PythonAXF/templates/market/market.html
+++ b/PythonAXF/templates/market/market.html
@@ -10,6 +10,9 @@
             background: url(/static/base/img/market1.png) no-repeat center;
             background-size: 1.25rem;
         }
+        footer .market dd {
+            color: #ffd601;
+        }
     </style>
 {% endblock %}
 
