--- a/PythonAXF/templates/mine/mine.html
+++ b/PythonAXF/templates/mine/mine.html
@@ -11,7 +11,12 @@
             background: url(/static/base/img/mine1.png) no-repeat center;
             background-size: 1.25rem;
         }
+        footer .mine dd {
+            color: #ffd601;
+
+        }
     </style>
+
 {% endblock %}
 
 
