闪购超市框架完成

--- a/PythonAXF/templates/base/base.html
+++ b/PythonAXF/templates/base/base.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'base/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'base/css/swiper.css' %}">
+{#    <link rel="stylesheet" href="{% static 'base/css/bootstrap.css' %}">#}
+{#    <link rel="stylesheet" href="{% static 'base/css/swiper.css' %}">#}
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'base/css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'base/css/base.css' %}">
     {#   标题#}
@@ -20,7 +21,7 @@
 
 {# 头部#}
 {% block header %}
-    <header>爱鲜蜂</header>
+    <header>平天下</header>
 {% endblock %}
 
 
@@ -71,7 +72,7 @@
 <script src="{% static 'base/js/jquery.js' %}"></script>
 <script src="{% static 'base/js/jquery.cookie.js' %}"></script>
 <script src="{% static 'base/js/bootstrap.js' %}"></script>
-<script src="{% static 'base/js/swiper.js' %}"></script>
+{#<script src="{% static 'base/js/swiper.js' %}"></script>#}
 <script src="{% static 'base/js/base.js' %}"></script>
 {# JS#}
 {% block EXTJS %}
