--- a/PythonAXF/static/home/css/home.css
+++ b/PythonAXF/static/home/css/home.css
@@ -29,6 +29,7 @@ footer .home dd {
     width: 100%;
     height: 100%;
 }
+
 #topSwiper .swiper-pagination{
     bottom: 0px;
 }
@@ -127,7 +128,7 @@ footer .home dd {
 }
 .main .main-wrapper{
     /* 8px*/
-    margin: 0.5rem 0;
+    margin: 0;
     background: white;
 }
 .main .main-wrapper .title{
@@ -136,6 +137,8 @@ footer .home dd {
     line-height: 3rem;
     text-align: center;
     position: relative;
+    /*font-size: 1rem;*/
+    /*font-weight: bold;*/
 }
 .main .main-wrapper .title a{
     position: absolute;
