--- a/PythonAXF/templates/cart/cart.html
+++ b/PythonAXF/templates/cart/cart.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html' %}
+{% load static %}
 
 {% block title %}
     <title>购物车</title>
@@ -18,4 +19,9 @@
 
 {% block content %}
 购物车
+{% endblock %}
+
+
+{% block EXTJS %}
+    <script src="{% static 'cart/js/cart.js' %}"></script>
 {% endblock %}
