--- a/PythonAXF/templates/home/home.html
+++ b/PythonAXF/templates/home/home.html
@@ -129,6 +129,7 @@
                         <span class="price">{{ mianshow.price1 }}</span>
                         <span class="marketprice">{{ mianshow.marketprice1 }}</span>
                     </a>
+                    <button>+</button>
                 </div>
                 <div class="shopitem">
                     <a href="#">
@@ -137,6 +138,7 @@
                         <span class="price">{{ mianshow.price2 }}</span>
                         <span class="marketprice">{{ mianshow.marketprice2 }}</span>
                     </a>
+                    <button>+</button>
                 </div>
                 <div class="shopitem">
                     <a href="#">
@@ -145,6 +147,7 @@
                         <span class="price">{{ mianshow.price3 }}</span>
                         <span class="marketprice">{{ mianshow.marketprice3 }}</span>
                     </a>
+                    <button>+</button>
                 </div>
             </div>
         </div>
