--- a/PythonAXF/static/market/css/market.css
+++ b/PythonAXF/static/market/css/market.css
@@ -109,6 +109,7 @@ footer .market dd {
 .market .main-content .content-wrapper ul li a .goods-img{
     display: block;
     width: 33.3%;
+    height: 100%;
     float: left;
 }
 .market .main-content .content-wrapper ul li a .goods-info{
