登录注册验证完成

--- a/PythonAXF/templates/market/market.html
+++ b/PythonAXF/templates/market/market.html
@@ -79,6 +79,12 @@
                                     </div>
                                 </div>
                             </a>
+                         <div class="bt-wrapper">
+
+                            <span class="glyphicon glyphicon-minus"></span>
+                            <i class="num"></i>
+                            <span class="glyphicon glyphicon-plus" data-goodsid="{{ testgood.id }}"></span>
+                        </div>
                         </li>
                     {% endfor %}
                 </ul>
