--- a/PythonAXF/templates/mine/login.html
+++ b/PythonAXF/templates/mine/login.html
@@ -27,8 +27,8 @@
             {% csrf_token %}
 
             <div class="input-group">
-                <span class="input-group-addon">用户名</span>
-                <input type="text" class="form-control"  name="username">
+                <span class="input-group-addon">邮箱</span>
+                <input type="text" class="form-control"  name="email">
 
             </div>
             <span style="color: red;">{{ username_err }}</span>
