--- a/PythonAXF/templates/base/base.html
+++ b/PythonAXF/templates/base/base.html
@@ -73,7 +73,8 @@
 {#<script src="{% static 'base/js/jquery.cookie.js' %}"></script>#}
 <script src="https://cdn.bootcss.com/jquery-cookie/1.3.1/jquery.cookie.js"></script>
 {#<script href="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>#}
-<script src="{% static 'base/js/bootstrap.js' %}"></script>
+<script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+{#<script src="{% static 'base/js/bootstrap.js' %}"></script>#}
 {#<script src="{% static 'base/js/swiper.js' %}"></script>#}
 <script src="{% static 'base/js/base.js' %}"></script>
 {# JS#}
